<resources>
    <string name="app_name">My Profile</string>

    <!--    MainActivity    -->
    <string name="settings">Settings</string>
    <string name="name_surname">Name Surname</string>
    <string name="career">Career</string>
    <string name="home_address">Home address</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_my_contacts">View my contacts</string>
    <string name="content_description_user_avatar">Displays the user\'s avatar</string>
    <string name="content_description_facebook_icon">Displays the Facebook icon</string>
    <string name="content_description_linkedin_icon">Displays the Linkedin icon</string>
    <string name="content_description_instagram_icon">Displays the Instagram icon</string>
    <string name="access_is_denied">Access to contacts is denied</string>
    <string name="log_out">Log out</string>

    <!--    AuthActivity    -->
    <string name="titleText">Let\'s get acquainted</string>
    <string name="subtitle_text">Fill out the profile and go to the application!</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="google">Google</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="notice_agreement">By clicking Register you agree to our Terms and Conditions</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="error_on_email">Enter a valid email.</string>
    <string name="error_password_is_short">Password less than 8 characters.</string>
    <string name="error_password_without_numbers">Password does not contain numbers.</string>
    <string name="error_password_without_letters">Password does not contain letters.</string>

    <!--    MyContactsActivity    -->
    <string name="contacts">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="search_button">Displays a search button.</string>
    <string name="back_button">Shows a back button.</string>
    <string name="delete_button">Displays the delete button.</string>
    <string name="contact_removed">Contact has been removed.</string>
    <string name="cancel">Cancel</string>

    <!--    EditProfileDialog    -->
    <string name="edit_user">Edit user</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="displays_the_add_photo_button">Displays the add photo button.</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>

    <!--    PagerFragment    -->
    <string name="tab1">My profile</string>
    <string name="tab2">My contacts</string>

    <!--    SignUpExtended    -->
    <string name="forward">Forward</string>
    <string name="your_profile_data">Your profile data</string>
    <string name="user_name">User name</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="open_gallery">Open gallery</string>

    <!--    LogIn    -->
    <string name="hello">Hello!</string>
    <string name="enter_your_email_and_password_below">Enter your email and password below</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="forgot_your_password">Forgot your password?</string>

    <!--    UserItem    -->
    <string name="add">Add</string>

    <!--    Search    -->
    <string name="notification">Click on the notification to search</string>
    <string name="search">Search</string>
    <string name="no_results_found">No results found</string>
    <string name="you_can_see_more_contacts_in_the_recommendation">You can see more contacts in the recommendation</string>

    <!--    AddContact    -->
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_to_find_an_internet_access_point">Try to find an Internet access point and visit the page again</string>
</resources>