<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/first_background_color"
    tools:context=".MainActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/second_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/middleLine"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/upperBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/userDataFloor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/floorLineIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/settings"
        android:textColor="@color/main_text_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/upperBorder" />

    <ImageView
        android:id="@+id/userAvatar"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@mipmap/my_user_photo_round"
        android:contentDescription="@string/content_description_user_avatar" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_medium"
        android:layout_marginBottom="8dp"
        android:text="@string/name_surname"
        android:textColor="@color/main_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/userCareer" />

    <TextView
        android:id="@+id/userCareer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_medium"
        android:layout_marginBottom="16dp"
        android:text="@string/career"
        android:textColor="@color/secondary_text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/userHomeAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/userHomeAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/home_address"
        android:textColor="@color/secondary_text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/userDataFloor" />

    <ImageView
        android:id="@+id/iconFacebook"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@id/floorLineIcons"
        app:layout_constraintEnd_toStartOf="@id/iconLinkedin"
        android:src="@drawable/icon_facebook_foreground"
        android:contentDescription="@string/content_description_facebook_icon" />

    <ImageView
        android:id="@+id/iconLinkedin"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/floorLineIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/icon_linkedin_foreground"
        android:contentDescription="@string/content_description_linkedin_icon" />

    <ImageView
        android:id="@+id/iconInstagram"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toTopOf="@id/floorLineIcons"
        app:layout_constraintStart_toEndOf="@id/iconLinkedin"
        android:src="@drawable/icon_instagram_foreground"
        android:contentDescription="@string/content_description_instagram_icon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editProfile"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/frame_button_edit_profile"
        android:text="@string/edit_profile"
        android:textColor="@color/second_main_text_color"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/viewMyContacts"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/viewMyContacts"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="@drawable/frame_button_view_my_contacts"
        android:text="@string/view_my_contacts"
        android:textColor="@color/main_text_color"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@id/bottomBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />


</androidx.constraintlayout.widget.ConstraintLayout>