<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMyContactsLeftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMyContactsRightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <LinearLayout
        android:id="@+id/linearLayoutMyContactsContactCase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/frame_contacts_data"
        app:layout_constraintEnd_toEndOf="@id/guidelineMyContactsRightBorder"
        app:layout_constraintStart_toStartOf="@id/guidelineMyContactsLeftBorder">

        <ImageView
            android:id="@+id/imageViewMyContactsUserAvatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/content_description_user_avatar"
            android:src="@drawable/default_user_photo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMyContactsUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_medium"
                android:text="@string/name_surname"
                android:textColor="?attr/colorSecondMainText"
                android:textSize="@dimen/text_large_size" />

            <TextView
                android:id="@+id/textViewMyContactsUserCareer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_medium"
                android:text="@string/career"
                android:textColor="?attr/colorSecondaryTextForContacts"
                android:textSize="@dimen/text_smallest_size" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/buttonMyContactsDelete"
            android:layout_width="50dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@drawable/ic_delete_button_foreground"
            android:contentDescription="@string/delete_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>